--- a/app/src/main/res/layout/fragment_top.xml
+++ b/app/src/main/res/layout/fragment_top.xml
@@ -6,11 +6,11 @@
     android:orientation="vertical"
     tools:context=".TopFragment">
 
-<!--    <fragment-->
-<!--        android:id="@+id/listadrinuf"-->
-<!--        android:name="pl.put.poznan.aplikacje.mobilne.cocktails.CocktailListFragment"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:layout_weight="2" />-->
+    <fragment
+        android:id="@+id/animacja"
+        android:name="pl.put.poznan.aplikacje.mobilne.cocktails.SunsetFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2" />
 
 </LinearLayout>
